--- a/graphics/jasper/Makefile
+++ b/graphics/jasper/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.20 2006/02/05 23:09:34 joerg Exp $
+# $NetBSD: Makefile,v 1.21 2006/12/02 22:32:59 jschauma Exp $
 #
 
-DISTNAME=	jasper-1.701.0
-PKGREVISION=	2
+DISTNAME=	jasper-1.900.0
 CATEGORIES=	graphics
 MASTER_SITES=	http://www.ece.uvic.ca/~mdadams/jasper/software/
 EXTRACT_SUFX=	.zip
