--- a/audio/easytag/Makefile
+++ b/audio/easytag/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.50 2006/04/13 19:26:01 jlam Exp $
+# $NetBSD: Makefile,v 1.51 2006/12/18 01:34:18 wiz Exp $
 #
 
 DISTNAME=	easytag-1.1
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	audio
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=easytag/}
 EXTRACT_SUFX=	.tar.bz2
