--- a/audio/gst-plugins0.10-flac/Makefile
+++ b/audio/gst-plugins0.10-flac/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2006/06/14 11:24:30 drochner Exp $
+# $NetBSD: Makefile,v 1.1.1.1 2006/07/02 11:42:49 drochner Exp $
 #
 
 GST_PLUGINS0.10_NAME=	flac
@@ -6,6 +6,7 @@ GST_PLUGINS0.10_DIRS=	ext/flac
 GST_PLUGINS0.10_FLAGS=	flac
 
 .include "../../multimedia/gst-plugins0.10-good/Makefile.common"
+PKGREVISION=		1
 
 .include "../../audio/flac/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
