--- a/audio/ices-mp3/Makefile
+++ b/audio/ices-mp3/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.13 2006/02/05 23:08:10 joerg Exp $
+# $NetBSD: Makefile,v 1.14 2007/01/07 09:13:47 rillig Exp $
 #
 
 DISTNAME=		ices-${ICES_VERSION}
 PKGNAME=		ices-mp3-${ICES_VERSION}
-PKGREVISION=		4
+PKGREVISION=		5
 ICES_VERSION=		0.4
 CATEGORIES=		audio
 MASTER_SITES=		http://svn.xiph.org/releases/ices/
