--- a/audio/libsamplerate/Makefile
+++ b/audio/libsamplerate/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.12 2006/03/04 21:28:56 jlam Exp $
+# $NetBSD: Makefile,v 1.13 2006/04/06 06:21:35 reed Exp $
 #
 
 DISTNAME=	libsamplerate-0.1.2
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	audio
 MASTER_SITES=	http://www.mega-nerd.com/SRC/
 
