--- a/audio/musicpd/Makefile
+++ b/audio/musicpd/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.24 2006/03/09 21:04:41 jlam Exp $
+# $NetBSD: Makefile,v 1.25 2006/05/19 16:18:53 rillig Exp $
 
 DISTNAME=		mpd-0.11.5
 PKGNAME=		${DISTNAME:S/mpd/musicpd/}
-PKGREVISION=		5
+PKGREVISION=		6
 CATEGORIES=		audio
 MASTER_SITES=		http://mercury.chem.pitt.edu/~shank/
 
