--- a/audio/timidity/Makefile
+++ b/audio/timidity/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.57 2006/04/17 13:46:16 wiz Exp $
+# $NetBSD: Makefile,v 1.58 2006/04/22 09:22:06 rillig Exp $
 
 DISTNAME=	TiMidity++-2.13.2
 PKGNAME=	${DISTNAME:S/TiMidity++/timidity/}
-PKGREVISION=	5
+PKGREVISION=	6
 CATEGORIES=     audio
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=timidity/}
 EXTRACT_SUFX=	.tar.bz2
