--- a/audio/twolame/Makefile
+++ b/audio/twolame/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2006/05/21 10:16:55 xtraeme Exp $
 #
 
 DISTNAME=	twolame-0.3.7
+PKGREVISION=	1
 CATEGORIES=	audio
 MASTER_SITES=	http://www.ecs.soton.ac.uk/~njh/twolame/
 
