--- a/audio/xmms-flac/Makefile
+++ b/audio/xmms-flac/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.19 2006/09/09 02:41:55 obache Exp $
+# $NetBSD: Makefile,v 1.20 2006/12/15 14:34:19 wiz Exp $
 #
 
 DISTNAME=	flac-1.1.2
 PKGNAME=	xmms-flac-1.1.2
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	audio archivers
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=flac/}
 
