--- a/games/stratagus/Makefile
+++ b/games/stratagus/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.13 2006/08/14 22:37:57 wiz Exp $
+# $NetBSD: Makefile,v 1.14 2006/09/19 19:40:23 joerg Exp $
 #
 
 DISTNAME=		stratagus-2.1-src
 PKGNAME=		${DISTNAME:S/-src//}
-PKGREVISION=		9
+PKGREVISION=		10
 CATEGORIES=		games
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=stratagus/}
 
