--- a/graphics/simage/Makefile
+++ b/graphics/simage/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.6 2006/04/17 13:46:01 wiz Exp $
+# $NetBSD: Makefile,v 1.7 2006/05/15 22:07:33 joerg Exp $
 
 DISTNAME=		simage-1.6.1
-PKGREVISION=		3
+PKGREVISION=		4
 CATEGORIES=		graphics
 MASTER_SITES=		ftp://ftp.coin3d.org/pub/coin/src/
 
