--- a/math/octave-forge/Makefile
+++ b/math/octave-forge/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.21 2006/06/11 14:48:24 joerg Exp $
+# $NetBSD: Makefile,v 1.22 2006/10/04 21:47:57 wiz Exp $
 
 DISTNAME=	octave-forge-2006.03.17
+PKGREVISION=	1
 CATEGORIES=	math
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=octave/}
 
