--- a/multimedia/gxine/Makefile
+++ b/multimedia/gxine/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.28 2006/11/28 21:49:57 drochner Exp $
+# $NetBSD: Makefile,v 1.29 2007/01/05 14:54:29 drochner Exp $
 
 DISTNAME=	gxine-0.5.9
+PKGREVISION=	1
 CATEGORIES=	multimedia
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=xine/}
 EXTRACT_SUFX=	.tar.bz2
