--- a/multimedia/mkvtoolnix/Makefile
+++ b/multimedia/mkvtoolnix/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.11 2006/02/05 23:10:17 joerg Exp $
+# $NetBSD: Makefile,v 1.12 2006/10/08 05:22:19 salo Exp $
 #
 
 .include "../../multimedia/mkvtoolnix/Makefile.dist"
+PKGREVISION=	1
 
 MAINTAINER=	salo@NetBSD.org
 HOMEPAGE=	http://www.bunkus.org/videotools/mkvtoolnix/
