--- a/multimedia/vlc07/Makefile
+++ b/multimedia/vlc07/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.1.1.1 2006/09/26 07:19:41 martti Exp $
+# $NetBSD: Makefile,v 1.2 2007/01/07 09:14:01 rillig Exp $
 #
 
 DISTNAME=		vlc-${VLC_VER}
-PKGREVISION=		15
+PKGREVISION=		16
 CATEGORIES=		multimedia
 MASTER_SITES=		http://download.videolan.org/pub/videolan/vlc/${VLC_VER}/
 EXTRACT_SUFX=		.tar.bz2
