--- a/audio/flac/Makefile
+++ b/audio/flac/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.39 2006/12/15 14:34:19 wiz Exp $
+# $NetBSD: Makefile,v 1.40 2007/01/07 12:25:05 wiz Exp $
 
 DISTNAME=	flac-1.1.3
+PKGREVISION=	1
 CATEGORIES=	audio archivers
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=flac/}
 
