--- a/lang/spl/Makefile
+++ b/lang/spl/Makefile
@@ -1,10 +1,11 @@
-# $NetBSD: Makefile,v 1.5 2006/09/09 02:43:09 obache Exp $
+# $NetBSD: Makefile,v 1.6 2006/10/04 21:46:14 wiz Exp $
 #
 
 DISTNAME=	spl-0.9h
 PKGREVISION=	3
 CATEGORIES=	lang
-MASTER_SITES=	http://www.clifford.at/spl/releases/
+MASTER_SITES=	http://www.clifford.at/spl/releases/ \
+		http://www.clifford.at/spl/releases/OLD/
 
 MAINTAINER=	raphael@raphael.g-system.at
 HOMEPAGE=	http://www.clifford.at/spl/
