--- a/security/Makefile
+++ b/security/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.282 2006/11/18 16:10:41 obache Exp $
+# $NetBSD: Makefile,v 1.283 2006/11/25 13:37:01 obache Exp $
 #
 
 COMMENT=	Security tools
@@ -184,6 +184,7 @@ SUBDIR+=	p5-SHA
 SUBDIR+=	p5-String-Random
 SUBDIR+=	p5-Tie-EncryptedHash
 SUBDIR+=	pakemon
+SUBDIR+=	pam-af
 SUBDIR+=	pam-dbm
 SUBDIR+=	pam-ldap
 SUBDIR+=	pam-mysql
