--- a/mk/defaults/mk.conf
+++ b/mk/defaults/mk.conf
@@ -1,4 +1,4 @@
-# $NetBSD: mk.conf,v 1.143 2006/12/28 16:09:33 obache Exp $
+# $NetBSD: mk.conf,v 1.144 2007/01/02 17:56:52 rillig Exp $
 #
 
 # This file provides default values for variables that may be overridden
@@ -193,6 +193,8 @@ PREFER_NATIVE_PTHREADS?=	yes
 # build here instead of in pkgsrc
 # Possible: any path
 # Default: not defined
+#
+# Keywords: work tmp
 
 LOCALBASE?=	/usr/pkg
 #	This is the base directory where all packages will be installed.
