--- a/wm/amaterus/Makefile
+++ b/wm/amaterus/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.16 2006/02/05 23:11:12 joerg Exp $
+# $NetBSD: Makefile,v 1.17 2006/03/04 21:30:54 jlam Exp $
 
 DISTNAME=	amaterus-0.34.1
 PKGREVISION=	5
@@ -18,5 +18,7 @@ post-install:
 
 .include "../../textproc/libxml/buildlink3.mk"
 .include "../../x11/gtk/buildlink3.mk"
+.include "../../x11/libXext/buildlink3.mk"
+.include "../../x11/xextproto/buildlink3.mk"
 
 .include "../../mk/bsd.pkg.mk"
