--- a/time/asclock-gtk/Makefile
+++ b/time/asclock-gtk/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.24 2006/02/05 23:11:09 joerg Exp $
+# $NetBSD: Makefile,v 1.25 2006/03/04 21:30:52 jlam Exp $
 #
 
 DISTNAME=	asclock-gtk-2.1.10beta
@@ -38,4 +38,7 @@ do-install:
 	${CHOWN} -R ${SHAREOWN}:${SHAREGRP} ${PREFIX}/share/asclock-gtk
 
 .include "../../x11/gtk/buildlink3.mk"
+.include "../../x11/libXext/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
+.include "../../x11/xextproto/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
