--- a/wm/bbrun/Makefile
+++ b/wm/bbrun/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.16 2006/02/05 23:11:12 joerg Exp $
+# $NetBSD: Makefile,v 1.17 2006/12/15 20:33:01 joerg Exp $
 
 DISTNAME=	bbrun-1.3
 PKGREVISION=	4
@@ -23,5 +23,6 @@ do-install:
 
 .include "../../x11/gtk/buildlink3.mk"
 .include "../../x11/libXpm/buildlink3.mk"
+.include "../../x11/xextproto/buildlink3.mk"
 
 .include "../../mk/bsd.pkg.mk"
