--- a/mbone/rat/Makefile
+++ b/mbone/rat/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.31 2006/09/03 00:56:29 wiz Exp $
+# $NetBSD: Makefile,v 1.32 2007/01/07 09:14:00 rillig Exp $
 #
 
 DISTNAME=	rat-3.0.28
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	mbone
 MASTER_SITES=	http://www-mice.cs.ucl.ac.uk/multimedia/software/rat/3.0.28/
 
