--- a/net/tcpillust/Makefile
+++ b/net/tcpillust/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.16 2006/03/04 21:30:24 jlam Exp $
+# $NetBSD: Makefile,v 1.17 2006/03/08 19:02:47 minskim Exp $
 
 DISTNAME=	tcpillust-1.0a
 PKGREVISION=	4
@@ -32,5 +32,6 @@ post-install:
 
 .include "../../lang/tcl/buildlink3.mk"
 .include "../../net/libpcap/buildlink3.mk"
+.include "../../x11/libXext/buildlink3.mk"
 .include "../../x11/tk/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
