--- a/games/xconq/Makefile
+++ b/games/xconq/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.30 2006/03/05 16:27:25 jlam Exp $
+# $NetBSD: Makefile,v 1.31 2006/04/04 14:45:44 jlam Exp $
 
 DISTNAME=		xconq-7.4.1
 PKGREVISION=		5
@@ -30,6 +30,7 @@ post-install:
 		${MAKE_PROGRAM} ${MAKE_FLAGS} install-info
 
 .include "../../lang/tcl/buildlink3.mk"
+.include "../../x11/libXaw/buildlink3.mk"
 .include "../../x11/tk/buildlink3.mk"
 
 .include "../../mk/bsd.pkg.mk"
