--- a/databases/postgresql81-plpython/Makefile
+++ b/databases/postgresql81-plpython/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2006/03/20 14:45:51 uebayasi Exp $
+# $NetBSD: Makefile,v 1.2 2006/03/21 06:39:33 martti Exp $
 
 PKGNAME=	postgresql81-plpython-${BASE_VERS}
 COMMENT=	PL/Python procedural language for the PostgreSQL backend
@@ -10,7 +10,7 @@ DEPENDS+=	postgresql81-server>=${BASE_VERS}:../../databases/postgresql81-server
 CONFIGURE_ARGS+=	--with-python
 CONFIGURE_ENV+=		PYTHON="${PYTHONBIN}"
 
-BUILD_DIRS=		${WRKSRC}/src/pl/plpython
+BUILD_DIRS=		src/pl/plpython
 
 USE_LIBTOOL=		yes
 PKG_LIBTOOL=		${PKG_SHLIBTOOL}
