--- a/databases/postgresql80-plperl/Makefile
+++ b/databases/postgresql80-plperl/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2006/02/21 19:05:07 joerg Exp $
+# $NetBSD: Makefile,v 1.6 2006/09/09 02:41:56 obache Exp $
 
 PKGNAME=	postgresql80-plperl-${BASE_VERS}
 COMMENT=	PL/Perl procedural language for the PostgreSQL backend
@@ -10,7 +10,7 @@ DEPENDS+=	postgresql80-server>=${BASE_VERS}:../../databases/postgresql80-server
 PERL5_CONFIGURE=	NO
 CONFIGURE_ARGS+=	--with-perl
 
-BUILD_DIRS=		${WRKSRC}/src/pl/plperl
+BUILD_DIRS=		src/pl/plperl
 MAKE_FILE=		GNUmakefile
 
 USE_LIBTOOL=		yes
