--- a/wm/icewm-imlib/Makefile
+++ b/wm/icewm-imlib/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.25 2006/05/18 20:30:01 wiz Exp $
+# $NetBSD: Makefile,v 1.26 2006/08/06 05:20:40 kristerw Exp $
 
 PKGNAME=		${DISTNAME:S/-/-imlib-/}
 COMMENT=		Small, fast and light-weight window manager (imlib version)
@@ -12,6 +12,13 @@ PLIST_SRC=		${.CURDIR}/../icewm/PLIST
 CONFIGURE_ARGS+=	--with-gnome-menus=no
 CONFIGURE_ARGS+=	--with-imlib=yes
 CONFIGURE_ARGS+=	--with-xpm=no
+
+BUILDLINK_DEPMETHOD.libXt?=	build
+
+.include "../../x11/libSM/buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
+.include "../../x11/libXinerama/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 
 .include "../../graphics/imlib/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
