--- a/audio/xmms/Makefile
+++ b/audio/xmms/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.61 2006/07/08 01:22:41 minskim Exp $
+# $NetBSD: Makefile,v 1.62 2006/08/28 05:09:05 ben Exp $
 #
 
 PKGREVISION=		6
@@ -14,4 +14,8 @@ _INSTALL_UNSTRIPPED=	yes
 PLIST_SUBST+=	CDAUDIO=""
 .endif
 
+BUILDLINK_DEPMETHOD.libXt?=	build
+
+.include "../../x11/libSM/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
