--- a/multimedia/libdvdnav/Makefile
+++ b/multimedia/libdvdnav/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.4 2005/05/04 16:24:52 drochner Exp $
+# $NetBSD: Makefile,v 1.5 2006/03/04 21:30:14 jlam Exp $
 #
 
 DISTNAME=	libdvdnav-0.1.10
+PKGREVISION=	1
 CATEGORIES=	multimedia
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=dvd/}
 
