--- a/www/Makefile
+++ b/www/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.490 2006/12/08 23:32:34 xtraeme Exp $
+# $NetBSD: Makefile,v 1.491 2006/12/16 11:26:03 wiz Exp $
 #
 
 COMMENT=	Packages related to the World Wide Web
@@ -285,6 +285,7 @@ SUBDIR+=	py-jonpy
 SUBDIR+=	py-moin
 SUBDIR+=	py-nevow
 SUBDIR+=	py-pcgi
+SUBDIR+=	py-webpy
 SUBDIR+=	py-zpublisher
 SUBDIR+=	qDecoder
 SUBDIR+=	raggle
