--- a/sysutils/checkperms/Makefile
+++ b/sysutils/checkperms/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4 2006/11/04 07:47:23 rillig Exp $
+# $NetBSD: Makefile,v 1.5 2006/11/22 23:04:58 rillig Exp $
 #
 
 DISTNAME=	checkperms-1.4
@@ -11,6 +11,7 @@ HOMEPAGE=	http://www.schlechte-software.de/checkperms/
 COMMENT=	Check and correct file permissions
 
 INSTALLATION_DIRS=	bin ${PKGMANDIR}/cat1 ${PKGMANDIR}/man1
-MAKE_ENV+=		${BSD_MAKE_ENV}
+
+USE_BSD_MAKEFILE=	yes
 
 .include "../../mk/bsd.pkg.mk"
