--- a/graphics/mpeg2codec/Makefile
+++ b/graphics/mpeg2codec/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.18 2006/02/05 23:09:35 joerg Exp $
+# $NetBSD: Makefile,v 1.19 2006/03/04 21:29:50 jlam Exp $
 
 DISTNAME=	mpeg2vidcodec_v12
 PKGNAME=	mpeg2codec-1.2
@@ -17,7 +17,9 @@ USE_X11BASE=		yes
 
 INSTALLATION_DIRS=	bin
 
-.include "../../mk/x11.buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
+.include "../../x11/libXext/buildlink3.mk"
+.include "../../x11/xextproto/buildlink3.mk"
 
 do-install:
 	${INSTALL_PROGRAM} \
