--- a/x11/qt3-libs/Makefile
+++ b/x11/qt3-libs/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.57 2006/10/23 14:54:11 adam Exp $
+# $NetBSD: Makefile,v 1.58 2006/12/15 20:33:04 joerg Exp $
 
 PKGNAME=	qt3-libs-${QTVERSION}
 MAINTAINER=	adam@NetBSD.org
@@ -61,6 +61,7 @@ SUBST_SED.socklen=	-e 's/QT_SOCKLEN_T.*/QT_SOCKLEN_T socklen_t/'
 .include "../../graphics/mng/buildlink3.mk"
 .include "../../graphics/png/buildlink3.mk"
 .include "../../graphics/freetype2/buildlink3.mk"
+.include "../../x11/libSM/buildlink3.mk"
 .include "../../x11/libXcursor/buildlink3.mk"
 .include "../../x11/libXft/buildlink3.mk"
 .include "../../x11/libXrandr/buildlink3.mk"
